LPS-76937 LPS-76779 ant build-lang

--- a/portal-impl/src/content/Language_ar.properties
+++ b/portal-impl/src/content/Language_ar.properties
@@ -3876,6 +3876,7 @@ request-a-new-password-reset-link=طلب إعادة تعيين كلمة مرور
 request-holiday=طلب إجازة
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
 request-pending=طلب معلق (Automatic Translation)
+request-social-networking-summary-add-connection={0} would like to add you as a connection. (Automatic Copy)
 request-social-networking-summary-add-friend={0} يريد أن يكون صديقا.
 request-social-networking-summary-join-organization={0} يرغبون في الإشتراك {1}.
 request-timeout=إنتهى الوقت المخصص للطلب
@@ -5127,6 +5128,7 @@ training-credits=رصيد التدريب
 trainings=التدريبات
 transaction-id=الرمز التعريفي للعملية
 translate=ترجم
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=ترجمة محتوى اليب إلى {0}
 translation=المترجم
 translations=المترجم
@@ -5191,6 +5193,7 @@ unscramble=غير مبعثر
 unsubscribe=إلغاء الإشتراك
 unsubscribe-from-comments=إلغاء الاشتراك في التعليقات
 untitled=بدون عنوان (Automatic Translation)
+untranslated=Untranslated (Automatic Copy)
 untrusted=غير موثوق
 untrusted-plugin-repositories=مستودعات مكونات إضافية غير موثوقة
 up=أعلى
@@ -6236,4 +6239,3 @@ language.uk=أوكراني
 language.vi=الفيتنامية
 language.zh_CN=الصينية (الصين)
 language.zh_TW=الصينية (تايوان)
-request-social-networking-summary-add-connection={0} would like to add you as a connection. (Automatic Copy)
