--- a/portal-impl/src/content/Language_ca.properties
+++ b/portal-impl/src/content/Language_ca.properties
@@ -3881,6 +3881,7 @@ request-a-new-password-reset-link=Link per demanar el reinci de la contrasenya.
 request-holiday=Sol·licita vacances
 request-is-larger-than-x-and-could-not-be-processed=La sol·licitud és més gran que {0} i no pot ser processada.
 request-pending=Sol·licitud pendent
+request-social-networking-summary-add-connection={0} vol afegir-vos com a una connexió.
 request-social-networking-summary-add-friend={0} vol ser el teu amic.
 request-social-networking-summary-join-organization={0} vol unirse a {1}.
 request-timeout=Sol·licitud de temps mort
@@ -5132,6 +5133,7 @@ training-credits=Crèdits d'entrenament
 trainings=Entrenaments
 transaction-id=ID del TXN
 translate=Tradueix
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=S'està traduint el contingut web a {0}
 translation=Traductor
 translations=Traductor
@@ -5196,6 +5198,7 @@ unscramble=Desxifra
 unsubscribe=Dóna'm de baixa
 unsubscribe-from-comments=Dóna'm de baixa dels comentaris
 untitled=Sense títol (Automatic Translation)
+untranslated=Untranslated (Automatic Copy)
 untrusted=No fiable
 untrusted-plugin-repositories=Repositoris de connectors no fiables
 up=Dalt
@@ -6241,4 +6244,3 @@ language.uk=ucraïnès
 language.vi=vietnamita
 language.zh_CN=xinès (Xina)
 language.zh_TW=xinès (Taiwan)
-request-social-networking-summary-add-connection={0} vol afegir-vos com a una connexió.
