--- a/portal-impl/src/content/Language_da.properties
+++ b/portal-impl/src/content/Language_da.properties
@@ -3876,6 +3876,7 @@ request-a-new-password-reset-link=Anmode om et nyt password reset link. (Automat
 request-holiday=Request Holiday (Automatic Copy)
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
 request-pending=Request Pending (Automatic Copy)
+request-social-networking-summary-add-connection={0} would like to add you as a connection. (Automatic Copy)
 request-social-networking-summary-add-friend={0} wants to be your friend. (Automatic Copy)
 request-social-networking-summary-join-organization={0} wants to join {1}. (Automatic Copy)
 request-timeout=Request Timeout (Automatic Copy)
@@ -5127,6 +5128,7 @@ training-credits=Training Credits (Automatic Copy)
 trainings=Trainings (Automatic Copy)
 transaction-id=TXN ID (Automatic Copy)
 translate=Oversæt
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Translating webindhold to {0}
 translation=Oversætter
 translations=Oversætter
@@ -5191,6 +5193,7 @@ unscramble=Unscramble (Automatic Copy)
 unsubscribe=Unsubscribe (Automatic Copy)
 unsubscribe-from-comments=Abonner på kommentarer
 untitled=Untitled (Automatic Copy)
+untranslated=Untranslated (Automatic Copy)
 untrusted=Ubetroet
 untrusted-plugin-repositories=Betroede udvidelseskilder
 up=Op
@@ -6236,4 +6239,3 @@ language.uk=Ukrainsk
 language.vi=Vietnamese (Automatic Copy)
 language.zh_CN=Chinese (China) (Automatic Copy)
 language.zh_TW=Chinese (Taiwan) (Automatic Copy)
-request-social-networking-summary-add-connection={0} would like to add you as a connection. (Automatic Copy)
