--- a/portal-impl/src/content/Language_de.properties
+++ b/portal-impl/src/content/Language_de.properties
@@ -3881,6 +3881,7 @@ request-a-new-password-reset-link=Einen neuen Link zum Zurücksetzen Ihres Kennw
 request-holiday=Urlaub beantragen
 request-is-larger-than-x-and-could-not-be-processed=Request größer als {0}. Verbeitung nicht möglich.
 request-pending=Anfrage ausstehend
+request-social-networking-summary-add-connection={0} würde sich gern mit Ihnen verbinden.
 request-social-networking-summary-add-friend={0} möchte Ihr Freund sein.
 request-social-networking-summary-join-organization={0} möchte {1} beitreten.
 request-timeout=Zeitüberschreitung des Requests
@@ -5132,6 +5133,7 @@ training-credits=Trainings-Guthaben
 trainings=Training
 transaction-id=Transaktions-ID
 translate=Übersetzen
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Webcontent wird nach {0} übersetzt
 translation=Übersetzer
 translations=Übersetzungen
@@ -5196,6 +5198,7 @@ unscramble=Dechiffrieren
 unsubscribe=Abbestellen
 unsubscribe-from-comments=Kommentare abbestellen
 untitled=Untitled (Automatic Copy)
+untranslated=Untranslated (Automatic Copy)
 untrusted=Nicht vertrauenswürdig
 untrusted-plugin-repositories=Nicht vertrauenswürdige Plugin-Repositorys
 up=Hoch
@@ -6241,4 +6244,3 @@ language.uk=Ukrainisch
 language.vi=Vietnamesisch
 language.zh_CN=Chinesisch (China)
 language.zh_TW=Chinesisch (Taiwan)
-request-social-networking-summary-add-connection={0} würde sich gern mit Ihnen verbinden.
