--- a/portal-impl/src/content/Language_el.properties
+++ b/portal-impl/src/content/Language_el.properties
@@ -3876,6 +3876,7 @@ request-a-new-password-reset-link=Ζητήσετε ένα νέο κωδικό π
 request-holiday=Αίτημα διακοπών
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
 request-pending=Αίτημα σε εκκρεμότητα
+request-social-networking-summary-add-connection={0} would like to add you as a connection. (Automatic Copy)
 request-social-networking-summary-add-friend=Ο/η {0} θέλει να γίνει φίλος/η σας.
 request-social-networking-summary-join-organization={0} θέλει να γίνει μέλος στο {1}.
 request-timeout=Χρόνος λήξης αιτήματος
@@ -5127,6 +5128,7 @@ training-credits=Βαθμοί εκπαίδευσης
 trainings=Εκπαιδεύσεις
 transaction-id=Ταυτοτητα δοσοληψίας
 translate=Μετάφραση
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Μετάφραση του web content σε {0}
 translation=Μεταφραστής
 translations=Μεταφραστής
@@ -5191,6 +5193,7 @@ unscramble=Αποκρυπτογράφηση
 unsubscribe=Διαγραφή συνδρομής
 unsubscribe-from-comments=Διαγραφή συνδρομής από τα σχόλια
 untitled=Χωρίς τίτλο (Automatic Translation)
+untranslated=Untranslated (Automatic Copy)
 untrusted=Μη έμπιστο
 untrusted-plugin-repositories=Χώροι αποθήκευσης μη έμπιστων plugins
 up=Επάνω
@@ -6236,4 +6239,3 @@ language.uk=Ουκρανικά
 language.vi=Βιετναμέζικα
 language.zh_CN=Κινέζικα (Κίνας)
 language.zh_TW=Κινέζικα (Ταϊβάν)
-request-social-networking-summary-add-connection={0} would like to add you as a connection. (Automatic Copy)
