--- a/portal-impl/src/content/Language_en.properties
+++ b/portal-impl/src/content/Language_en.properties
@@ -3882,6 +3882,7 @@ request-a-new-password-reset-link=Request a new password reset link.
 request-holiday=Request Holiday
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed.
 request-pending=Request Pending
+request-social-networking-summary-add-connection={0} would like to add you as a connection.
 request-social-networking-summary-add-friend={0} wants to be your friend.
 request-social-networking-summary-join-organization={0} wants to join {1}.
 request-timeout=Request Timeout
@@ -5133,6 +5134,7 @@ training-credits=Training Credits
 trainings=Trainings
 transaction-id=TXN ID
 translate=Translate
+translated=Translated
 translating-web-content-to-x=Translating Web Content to {0}
 translation=Translation
 translations=Translations
@@ -5197,6 +5199,7 @@ unscramble=Unscramble
 unsubscribe=Unsubscribe
 unsubscribe-from-comments=Unsubscribe from Comments
 untitled=Untitled
+untranslated=Untranslated
 untrusted=Untrusted
 untrusted-plugin-repositories=Untrusted Plugin Repositories
 up=Up
@@ -6242,4 +6245,3 @@ language.uk=Ukranian
 language.vi=Vietnamese
 language.zh_CN=Chinese (China)
 language.zh_TW=Chinese (Taiwan)
-request-social-networking-summary-add-connection={0} would like to add you as a connection.
