--- a/portal-impl/src/content/Language_es.properties
+++ b/portal-impl/src/content/Language_es.properties
@@ -3881,6 +3881,7 @@ request-a-new-password-reset-link=Solicite un nuevo enlace para restablecer la c
 request-holiday=Solicitar vacaciones
 request-is-larger-than-x-and-could-not-be-processed=La solicitud es mayor que {0} y no ha podido ser procesada.
 request-pending=Solicitud pendiente
+request-social-networking-summary-add-connection=A {0} le gustaría añadirte como conexión.
 request-social-networking-summary-add-friend={0} ha solicitado ser su amigo.
 request-social-networking-summary-join-organization={0} quiere unirse a la organización {1}.
 request-timeout=Tiempo de espera superado
@@ -5132,6 +5133,7 @@ training-credits=Créditos de entrenamiento
 trainings=Entrenamientos
 transaction-id=Identificador de transacción
 translate=Traducir
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Traducir contenido web a {0}
 translation=Traductor
 translations=Traductor
@@ -5196,6 +5198,7 @@ unscramble=Descifrar
 unsubscribe=Darse de baja
 unsubscribe-from-comments=Darse de baja de los comentarios
 untitled=Sin título (Automatic Translation)
+untranslated=Untranslated (Automatic Copy)
 untrusted=No fiables
 untrusted-plugin-repositories=Repositorios de plugins no fiables
 up=Arriba
@@ -6241,4 +6244,3 @@ language.uk=Ucraniano
 language.vi=Vietnamita
 language.zh_CN=Chino (China)
 language.zh_TW=Chino (Taiwan)
-request-social-networking-summary-add-connection=A {0} le gustaría añadirte como conexión.
