--- a/portal-impl/src/content/Language_et.properties
+++ b/portal-impl/src/content/Language_et.properties
@@ -3876,6 +3876,7 @@ request-a-new-password-reset-link=Taotle uut parooli lähtestamise linki. (Autom
 request-holiday=Küsi puhkust
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
 request-pending=Taotleda kuni (Automatic Translation)
+request-social-networking-summary-add-connection={0} would like to add you as a connection. (Automatic Copy)
 request-social-networking-summary-add-friend={0} wants to be your friend. (Automatic Copy)
 request-social-networking-summary-join-organization={0} wants to join {1}. (Automatic Copy)
 request-timeout=Esita timeout nõue
@@ -5127,6 +5128,7 @@ training-credits=Punktid koolituste eest
 trainings=Koolitused
 transaction-id=TXN ID (Automatic Translation)
 translate=Tõlgi
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Translating Web Content to {0} (Automatic Copy)
 translation=Tõlkija
 translations=Tõlkija
@@ -5191,6 +5193,7 @@ unscramble=Vastav (Automatic Translation)
 unsubscribe=Lahku
 unsubscribe-from-comments=Tellimuse märkused (Automatic Translation)
 untitled=Untitled (Automatic Translation)
+untranslated=Untranslated (Automatic Copy)
 untrusted=Mitteusaldatav
 untrusted-plugin-repositories=Mitteusaldatavad plugin'i hoidlad
 up=Üles
@@ -6236,4 +6239,3 @@ language.uk=Ukraina
 language.vi=Vietnami
 language.zh_CN=Hiina (Hiina)
 language.zh_TW=Hiina (Taiwan)
-request-social-networking-summary-add-connection={0} would like to add you as a connection. (Automatic Copy)
