--- a/portal-impl/src/content/Language_eu.properties
+++ b/portal-impl/src/content/Language_eu.properties
@@ -3876,6 +3876,7 @@ request-a-new-password-reset-link=Request a new password reset link. (Automatic 
 request-holiday=Eskatu oporrak
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
 request-pending=Request Pending (Automatic Copy)
+request-social-networking-summary-add-connection={0}(e)k konexio bezala gehitu nahi zaitu.
 request-social-networking-summary-add-friend={0}-k zure laguna izan nahi du.
 request-social-networking-summary-join-organization={0}-k {1}-ko kide izan nahi du.
 request-timeout=Itxaron denbora agortua
@@ -5127,6 +5128,7 @@ training-credits=Prestakuntza kredituak
 trainings=Prestakuntzak
 transaction-id=TXN IDa
 translate=Itzuli
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Web edukia itzultzen {0}-ra
 translation=Itzultzailea
 translations=Itzultzailea
@@ -5191,6 +5193,7 @@ unscramble=Argitu
 unsubscribe=Utzi harpidetza
 unsubscribe-from-comments=Utzi iruzkinen harpidetza
 untitled=Untitled (Automatic Copy)
+untranslated=Untranslated (Automatic Copy)
 untrusted=Ez fidagarriak
 untrusted-plugin-repositories=Plugin ez fidagarrien biltegiak
 up=Goian
@@ -6236,4 +6239,3 @@ language.uk=Ukraniera
 language.vi=Vietnamera
 language.zh_CN=Txinera (Txina)
 language.zh_TW=Txinera (Taiwan)
-request-social-networking-summary-add-connection={0}(e)k konexio bezala gehitu nahi zaitu.
