--- a/portal-impl/src/content/Language_fi.properties
+++ b/portal-impl/src/content/Language_fi.properties
@@ -3875,6 +3875,7 @@ request-a-new-password-reset-link=Pyydä uusi salasanan nollauslinkki.
 request-holiday=Pyydä lomaa
 request-is-larger-than-x-and-could-not-be-processed=Pyyntö on suurempi kuin {0} eikä sitä voidä käsitellä.
 request-pending=Pyyntö odottaa
+request-social-networking-summary-add-connection={0} haluaisi liitää sinut kaverikseen.
 request-social-networking-summary-add-friend={0} haluaa olla ystäväsi.
 request-social-networking-summary-join-organization={0} haluaa liittyä {1}.
 request-timeout=Pyynnön aikakatkaisu
@@ -5125,6 +5126,7 @@ training-credits=Harjoittelu krediittejä
 trainings=Harjoittelut
 transaction-id=Transaktio ID
 translate=Käännä
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Käännetään web-sisältöä kielelle {0}
 translation=Kääntäjä
 translations=Kääntäjä
@@ -5189,6 +5191,7 @@ unscramble=Selvitä
 unsubscribe=Peru tilaus
 unsubscribe-from-comments=Peruuta kommenttien tilaus
 untitled=Untitled (Automatic Copy)
+untranslated=Untranslated (Automatic Copy)
 untrusted=Epäluotettava
 untrusted-plugin-repositories=Epäluotettavat plugin varastot
 up=Ylös
@@ -6234,4 +6237,3 @@ language.uk=ukraina
 language.vi=vietnam
 language.zh_CN=kiina (Kiina)
 language.zh_TW=kiina (Taiwan)
-request-social-networking-summary-add-connection={0} haluaisi liitää sinut kaverikseen.
