--- a/portal-impl/src/content/Language_fr.properties
+++ b/portal-impl/src/content/Language_fr.properties
@@ -3881,6 +3881,7 @@ request-a-new-password-reset-link=Demander un nouveau lien de réinitialisation 
 request-holiday=Demander des vacances
 request-is-larger-than-x-and-could-not-be-processed=La demande est plus grande que {0} et ne peut pas être traitée.
 request-pending=En attente des requêtes
+request-social-networking-summary-add-connection={0} souhaiterait vous ajouter comme connexion
 request-social-networking-summary-add-friend={0} veut être votre ami.
 request-social-networking-summary-join-organization={0} veut rejoindre {1}.
 request-timeout=délai maximum de la requête
@@ -5132,6 +5133,7 @@ training-credits=Crédits de formation
 trainings=Formations
 transaction-id=identifiant de la transaction
 translate=Traduire
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Traduction de contenu web vers {0}
 translation=Traducteur
 translations=Traducteur
@@ -5196,6 +5198,7 @@ unscramble=Déchiffreur de mots
 unsubscribe=Se désinscrire
 unsubscribe-from-comments=Se désabonner des commentaires
 untitled=Sans titre (Automatic Translation)
+untranslated=Untranslated (Automatic Copy)
 untrusted=A éviter
 untrusted-plugin-repositories=Dépôts de plugins à éviter
 up=Haut
@@ -6241,4 +6244,3 @@ language.uk=Ukrainien
 language.vi=Vietnamien
 language.zh_CN=Chinois (Chine)
 language.zh_TW=Chinois (Taïwan)
-request-social-networking-summary-add-connection={0} souhaiterait vous ajouter comme connexion
