--- a/portal-impl/src/content/Language_gl.properties
+++ b/portal-impl/src/content/Language_gl.properties
@@ -3876,6 +3876,7 @@ request-a-new-password-reset-link=Request a new password reset link. (Automatic 
 request-holiday=Solicitar vacacións
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
 request-pending=Request Pending (Automatic Copy)
+request-social-networking-summary-add-connection={0} quere engadirte como conexión.
 request-social-networking-summary-add-friend={0} quere ser teu amigo.
 request-social-networking-summary-join-organization={0} quere unirse a {1}.
 request-timeout=Tempo de espera superado
@@ -5127,6 +5128,7 @@ training-credits=Créditos do adestramento
 trainings=Adestramentos
 transaction-id=ID de transación
 translate=Traducir
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Traducindo contido web a {0}
 translation=Tradutor
 translations=Tradutor
@@ -5191,6 +5193,7 @@ unscramble=Descifrar
 unsubscribe=Desuscribirse
 unsubscribe-from-comments=Anular subscrición aos comentarios
 untitled=Untitled (Automatic Copy)
+untranslated=Untranslated (Automatic Copy)
 untrusted=Non fiables
 untrusted-plugin-repositories=Repositorios de plugins non fiables
 up=Arriba
@@ -6236,4 +6239,3 @@ language.uk=Ucraniano
 language.vi=Vietnamese (Automatic Copy)
 language.zh_CN=Chinese (China) (Automatic Copy)
 language.zh_TW=Chinese (Taiwan) (Automatic Copy)
-request-social-networking-summary-add-connection={0} quere engadirte como conexión.
