--- a/portal-impl/src/content/Language_hr.properties
+++ b/portal-impl/src/content/Language_hr.properties
@@ -3876,6 +3876,7 @@ request-a-new-password-reset-link=Request a new password reset link. (Automatic 
 request-holiday=Zahtjev za praznik
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
 request-pending=Request Pending (Automatic Copy)
+request-social-networking-summary-add-connection={0} vas želi dodati kao vezu.
 request-social-networking-summary-add-friend={0} želi biti tvoj prijatelj.
 request-social-networking-summary-join-organization={0} se želi pridružiti {1}.
 request-timeout=Istek zahtjeva
@@ -5127,6 +5128,7 @@ training-credits=Kredita za izobrazbu
 trainings=Treninzi
 transaction-id=TXN ID
 translate=Prevedi
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Prevođenje web sadržaja za {0}
 translation=Prevoditelj
 translations=Prevoditelj
@@ -5191,6 +5193,7 @@ unscramble=Dešifriraj
 unsubscribe=Ukini pretplatu
 unsubscribe-from-comments=Odjava iz Komentari
 untitled=Untitled (Automatic Copy)
+untranslated=Untranslated (Automatic Copy)
 untrusted=Neprovjereno
 untrusted-plugin-repositories=Neprovjereni spremnici dodataka
 up=Gore
@@ -6236,4 +6239,3 @@ language.uk=Ukrajinski
 language.vi=Vijetnamski
 language.zh_CN=Kineski (Kina)
 language.zh_TW=Kineski (Tajvan)
-request-social-networking-summary-add-connection={0} vas želi dodati kao vezu.
