--- a/portal-impl/src/content/Language_hu.properties
+++ b/portal-impl/src/content/Language_hu.properties
@@ -3881,6 +3881,7 @@ request-a-new-password-reset-link=Új jelszó visszaállítási link igénylése
 request-holiday=Szünnap igénylése
 request-is-larger-than-x-and-could-not-be-processed=A kérés nagyobb, mint {0}, és nem feldolgozható.
 request-pending=Kérelem függőben
+request-social-networking-summary-add-connection={0} ember szeretne hozzáadni téged a kapcsolataihoz.
 request-social-networking-summary-add-friend={0} a barátod szeretne lenni.
 request-social-networking-summary-join-organization={0} csatlakozni szeretne {1}-hez.
 request-timeout=Igénylés lejárata
@@ -5132,6 +5133,7 @@ training-credits=Képzési közreműködők
 trainings=Képzések
 transaction-id=TXN ID
 translate=Fordítás
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Webtartalom fordítása erre: {0}
 translation=Fordítás
 translations=Fordítás
@@ -5196,6 +5198,7 @@ unscramble=Visszakódolás
 unsubscribe=Leiratkozás
 unsubscribe-from-comments=Leiratkozás a hozzászólásokról
 untitled=Untitled (Automatic Translation)
+untranslated=Untranslated (Automatic Copy)
 untrusted=Nem megbízható
 untrusted-plugin-repositories=Nem megbízható plugin adattárak
 up=Fel
@@ -6241,4 +6244,3 @@ language.uk=Ukrán
 language.vi=Vietnámi
 language.zh_CN=Kínai (Kína)
 language.zh_TW=Kínai (Taiwan)
-request-social-networking-summary-add-connection={0} ember szeretne hozzáadni téged a kapcsolataihoz.
