--- a/portal-impl/src/content/Language_in.properties
+++ b/portal-impl/src/content/Language_in.properties
@@ -3876,6 +3876,7 @@ request-a-new-password-reset-link=Meminta kata sandi baru ulang link. (Automatic
 request-holiday=Permintaan Holiday
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
 request-pending=Permintaan tertunda (Automatic Translation)
+request-social-networking-summary-add-connection={0} Ingin menambahkan anda sebagai sambungan.
 request-social-networking-summary-add-friend={0} ingin menjadi teman Anda.
 request-social-networking-summary-join-organization={0} ingin bergabung{1}.
 request-timeout=Permintaan Timeout
@@ -5127,6 +5128,7 @@ training-credits=Pelatihan Kredit
 trainings=pelatihan
 transaction-id=TXN ID
 translate=Menerjemahkan
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Translating Web Content to {0} (Automatic Copy)
 translation=Penerjemah
 translations=Penerjemah
@@ -5191,6 +5193,7 @@ unscramble=Menguraikan
 unsubscribe=Berhenti berlangganan
 unsubscribe-from-comments=Berhenti berlangganan dari Komentar
 untitled=Untitled (Automatic Translation)
+untranslated=Untranslated (Automatic Copy)
 untrusted=Tidak dipercaya
 untrusted-plugin-repositories=Plugin Repositori terpercaya
 up=Ke atas
@@ -6236,4 +6239,3 @@ language.uk=Ukrainia
 language.vi=Vietnam
 language.zh_CN=Cina
 language.zh_TW=Cina (Taiwan)
-request-social-networking-summary-add-connection={0} Ingin menambahkan anda sebagai sambungan.
