--- a/portal-impl/src/content/Language_it.properties
+++ b/portal-impl/src/content/Language_it.properties
@@ -3879,6 +3879,7 @@ request-a-new-password-reset-link=Richiedi il link di cambio password.
 request-holiday=Richiesta di Vacanze
 request-is-larger-than-x-and-could-not-be-processed=La richiesta è più grande di {0} e non può essere elaborata.
 request-pending=Richiesta in Attesa
+request-social-networking-summary-add-connection={0} vorrebbe aggiungerti come connessione.
 request-social-networking-summary-add-friend={0} vuole essere tuo amico.
 request-social-networking-summary-join-organization={0} vuole iscriversi a {1}.
 request-timeout=Timeout della Richiesta
@@ -5130,6 +5131,7 @@ training-credits=Accreditamenti di formazione
 trainings=Formazioni
 transaction-id=ID Transazione
 translate=Traduci
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Traduzione del Contenuto Web a {0}
 translation=Traduttore
 translations=Traduttore
@@ -5194,6 +5196,7 @@ unscramble=Riordina
 unsubscribe=Annulla l'iscrizione
 unsubscribe-from-comments=Disdire dai Commenti
 untitled=Senza titolo (Automatic Translation)
+untranslated=Untranslated (Automatic Copy)
 untrusted=Non certificati
 untrusted-plugin-repositories=Repositories dei Plugin non certificati
 up=Su
@@ -6239,4 +6242,3 @@ language.uk=Ucraino
 language.vi=Vietnamita
 language.zh_CN=Cinese (Cina)
 language.zh_TW=Cinese (Taiwan)
-request-social-networking-summary-add-connection={0} vorrebbe aggiungerti come connessione.
