--- a/portal-impl/src/content/Language_lo.properties
+++ b/portal-impl/src/content/Language_lo.properties
@@ -3876,6 +3876,7 @@ request-a-new-password-reset-link=Request a new password reset link. (Automatic 
 request-holiday=ຕ້ອງການ​ວັນພັກ
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
 request-pending={0} ການຫ້າມ ແມ່ນຈຳເປັນ
+request-social-networking-summary-add-connection={0} would like to add you as a connection. (Automatic Copy)
 request-social-networking-summary-add-friend={0} ຕ້ອງການ​ເປັນ​ເພື່ອນ​ກັບ​ທ່ານ
 request-social-networking-summary-join-organization={0} ຕ້ອງການ​ເຂົ້າ​ຮ່ວມ {1}.
 request-timeout=ໝົດ​ເວລາ​ຂອງ​ການ​ຂໍ​ຮ້ອງ
@@ -5127,6 +5128,7 @@ training-credits=ເຄດິດການຝຶກອົບຮົມ
 trainings=ການຝຶກອົບຮົມຕ່າງໆ
 transaction-id=ທີເອັກເອັນ ໄອດີ
 translate=ແປ
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=ການແປເນື້ອໃນເວບເພື່ອ{0}
 translation=ຜູ້ແປ
 translations=ຜູ້ແປ
@@ -5191,6 +5193,7 @@ unscramble=ຖອດລະຫັດ
 unsubscribe=ຍົກເລີກການຮັບສະໝັກ
 unsubscribe-from-comments=ບໍ່ຮັບຄຳເຫັນຕ່າງໆ
 untitled=Untitled (Automatic Copy)
+untranslated=Untranslated (Automatic Copy)
 untrusted=ບໍ່ໜ້າເຊື່ອຖື
 untrusted-plugin-repositories=ຄັງປັ໋ກອີນບໍ່ໜ້າເຊື່ອຖື
 up=ຂ້າງເທິງ
@@ -6236,4 +6239,3 @@ language.uk=Ukrainian
 language.vi=Vietnamese (Automatic Copy)
 language.zh_CN=Chinese (China) (Automatic Copy)
 language.zh_TW=Chinese (Taiwan) (Automatic Copy)
-request-social-networking-summary-add-connection={0} would like to add you as a connection. (Automatic Copy)
