--- a/portal-impl/src/content/Language_lt.properties
+++ b/portal-impl/src/content/Language_lt.properties
@@ -3876,6 +3876,7 @@ request-a-new-password-reset-link=Prašyti naujo slaptažodžio nustatymo iš na
 request-holiday=Prašo atostogų (Automatic Translation)
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
 request-pending=Prašymas nagrinėjamas (Automatic Translation)
+request-social-networking-summary-add-connection={0} would like to add you as a connection. (Automatic Copy)
 request-social-networking-summary-add-friend={0} wants to be your friend. (Automatic Copy)
 request-social-networking-summary-join-organization={0} wants to join {1}. (Automatic Copy)
 request-timeout=Užklausos skirtasis laikas (Automatic Translation)
@@ -5127,6 +5128,7 @@ training-credits=Mokymo kreditų (Automatic Translation)
 trainings=Mokymai (Automatic Translation)
 transaction-id=TXN ID (Automatic Translation)
 translate=Vertėjas
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Translating Web Content to {0} (Automatic Copy)
 translation=Vertėjas
 translations=Vertėjas
@@ -5191,6 +5193,7 @@ unscramble=Rozszyfrować (Automatic Translation)
 unsubscribe=Atsisakyti prenumeratos (Automatic Translation)
 unsubscribe-from-comments=Prenumeruoti komentarus (Automatic Translation)
 untitled=Be pavadinimo (Automatic Translation)
+untranslated=Untranslated (Automatic Copy)
 untrusted=Nepatikimas (Automatic Translation)
 untrusted-plugin-repositories=Nepatikimas įskiepiai saugyklos (Automatic Translation)
 up=Į viršų (Automatic Translation)
@@ -6236,4 +6239,3 @@ language.uk=Ukrainos
 language.vi=Vietnamiečių
 language.zh_CN=Kinų (Kinija)
 language.zh_TW=Kinų (Taivanas)
-request-social-networking-summary-add-connection={0} would like to add you as a connection. (Automatic Copy)
