--- a/portal-impl/src/content/Language_nb.properties
+++ b/portal-impl/src/content/Language_nb.properties
@@ -3876,6 +3876,7 @@ request-a-new-password-reset-link=Be om et nytt passord tilbakestille koblingen.
 request-holiday=Etterspør ferie
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
 request-pending=Forespørsel venter
+request-social-networking-summary-add-connection={0} ønsker å legge deg til som forbindelse.
 request-social-networking-summary-add-friend={0} vil være din venn.
 request-social-networking-summary-join-organization={0} vil bli medlem i {1}.
 request-timeout=Spørringen ble foreldet
@@ -5127,6 +5128,7 @@ training-credits=Treningskreditt
 trainings=Treninger
 transaction-id=Transaksjon-ID
 translate=Oversette
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Oversetter web-innhold til {0}
 translation=Oversetter
 translations=Oversetter
@@ -5191,6 +5193,7 @@ unscramble=Avdekke
 unsubscribe=Avslutt abonnement
 unsubscribe-from-comments=Avslutt abonnement på kommentarer
 untitled=Uten navn (Automatic Translation)
+untranslated=Untranslated (Automatic Copy)
 untrusted=Usikker
 untrusted-plugin-repositories=Usikre kataloger for tillegg
 up=Opp
@@ -6236,4 +6239,3 @@ language.uk=Ukrainsk
 language.vi=Vietnamesisk
 language.zh_CN=Kinesisk (Kina)
 language.zh_TW=Kinesisk (Taiwan)
-request-social-networking-summary-add-connection={0} ønsker å legge deg til som forbindelse.
