--- a/portal-impl/src/content/Language_nl.properties
+++ b/portal-impl/src/content/Language_nl.properties
@@ -3882,6 +3882,7 @@ request-a-new-password-reset-link=Verzoek een wachtwoordherstellink.
 request-holiday=Vakantieverzoek
 request-is-larger-than-x-and-could-not-be-processed=Het verzoek is groter dan {0} en kan niet worden verwerkt.
 request-pending=Verzoek in behandeling
+request-social-networking-summary-add-connection={0} wil u graag toevoegen als connectie.
 request-social-networking-summary-add-friend={0} wil vrienden worden.
 request-social-networking-summary-join-organization={0} wil lid worden van {1}.
 request-timeout=Antwoord op verzoek duurt te lang
@@ -5133,6 +5134,7 @@ training-credits=Studiepunten
 trainings=Opleidingen
 transaction-id=Transactie-ID
 translate=Vertalen
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Webcontent vertalen naar {0}
 translation=Vertaler
 translations=Vertaler
@@ -5197,6 +5199,7 @@ unscramble=Versleutelen ongedaan maken
 unsubscribe=Afmelden
 unsubscribe-from-comments=Afmelden van reacties
 untitled=Untitled (Automatic Copy)
+untranslated=Untranslated (Automatic Copy)
 untrusted=Onbetrouwbaar
 untrusted-plugin-repositories=Bewaarplaatsen voor onbetrouwbare plug-ins
 up=Op
@@ -6242,4 +6245,3 @@ language.uk=Oekraïens
 language.vi=Vietnamees
 language.zh_CN=Chinees (China)
 language.zh_TW=Chinees (Taiwan)
-request-social-networking-summary-add-connection={0} wil u graag toevoegen als connectie.
