--- a/portal-impl/src/content/Language_nl_BE.properties
+++ b/portal-impl/src/content/Language_nl_BE.properties
@@ -3882,6 +3882,7 @@ request-a-new-password-reset-link=Vraag dat een nieuwe wachtwoord op beginstand 
 request-holiday=Vakantie verzoeken
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
 request-pending=Aanvragen in behandeling (Automatic Translation)
+request-social-networking-summary-add-connection={0} would like to add you as a connection. (Automatic Copy)
 request-social-networking-summary-add-friend={0} wil jouw vriend zijn
 request-social-networking-summary-join-organization={0} wil lid worden van {1}.
 request-timeout=Antwoord op verzoek duurt te lang
@@ -5133,6 +5134,7 @@ training-credits=Studiepunten
 trainings=Opleidings
 transaction-id=Transactie ID
 translate=Vertaal
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Webcontent vertalen naar {0}
 translation=Vertaler
 translations=Vertaler
@@ -5197,6 +5199,7 @@ unscramble=Decoderen
 unsubscribe=Opzeggen
 unsubscribe-from-comments=Uitschrijven voor opmerkingen
 untitled=Untitled (Automatic Copy)
+untranslated=Untranslated (Automatic Copy)
 untrusted=Niet-vertrouwd
 untrusted-plugin-repositories=Niet-vertrouwde plugin repository
 up=Op
@@ -6242,4 +6245,3 @@ language.uk=Oekraïens
 language.vi=Vietnamees
 language.zh_CN=Chinees (China)
 language.zh_TW=Chinees (Taiwan)
-request-social-networking-summary-add-connection={0} would like to add you as a connection. (Automatic Copy)
