--- a/portal-impl/src/content/Language_pl.properties
+++ b/portal-impl/src/content/Language_pl.properties
@@ -3876,6 +3876,7 @@ request-a-new-password-reset-link=Żądanie resetowania hasła nowy link. (Autom
 request-holiday=Wniosek urlopowy
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
 request-pending=Zapytanie oczekujące
+request-social-networking-summary-add-connection={0} chciałby się z Tobą połączyć.
 request-social-networking-summary-add-friend={0} chce zostać Twoim znajomym.
 request-social-networking-summary-join-organization={0} chce się przyłączyć do {1}.
 request-timeout=Upłynął czas zapytania
@@ -5127,6 +5128,7 @@ training-credits=Kredyty na szkolenie
 trainings=Szkolenia
 transaction-id=ID TXN
 translate=Przetłumacz
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Tłumaczenie zawartości stron na {0}
 translation=Tłumacz
 translations=Tłumacz
@@ -5191,6 +5193,7 @@ unscramble=Rozszyfruj
 unsubscribe=Rezygnuj z subskrypcji
 unsubscribe-from-comments=Rezygnuj z subskrypcji komentarzy
 untitled=Bez tytułu (Automatic Translation)
+untranslated=Untranslated (Automatic Copy)
 untrusted=Niegodne zaufania
 untrusted-plugin-repositories=Repozytoria wtyczek niegodne zaufania
 up=W górę
@@ -6236,4 +6239,3 @@ language.uk=Ukraiński
 language.vi=Wietnamski
 language.zh_CN=Chiński (Chiny)
 language.zh_TW=Chiński (Taiwan)
-request-social-networking-summary-add-connection={0} chciałby się z Tobą połączyć.
