--- a/portal-impl/src/content/Language_pt_BR.properties
+++ b/portal-impl/src/content/Language_pt_BR.properties
@@ -3876,6 +3876,7 @@ request-a-new-password-reset-link=Solicitar um novo link de redefinição de sen
 request-holiday=Requisitar férias
 request-is-larger-than-x-and-could-not-be-processed=A requisição é maior que {0} e não pôde ser processada.
 request-pending=Requisição pendente
+request-social-networking-summary-add-connection={0} gostaria de adicioná-lo como conexão.
 request-social-networking-summary-add-friend={0} quer ser seu amigo.
 request-social-networking-summary-join-organization={0} quer participar de {1}.
 request-timeout=Tempo de requisição expirado
@@ -5127,6 +5128,7 @@ training-credits=Créditos de treinamento
 trainings=Treinamentos
 transaction-id=ID da transação
 translate=Traduza
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Traduzir conteúdo web para {0}
 translation=Tradutor
 translations=Tradutor
@@ -5191,6 +5193,7 @@ unscramble=Decifrar
 unsubscribe=Remover subscrição
 unsubscribe-from-comments=Retirar subscrição dos comentários
 untitled=Sem título (Automatic Translation)
+untranslated=Untranslated (Automatic Copy)
 untrusted=Não confiável
 untrusted-plugin-repositories=Repositórios de plugins não confiáveis
 up=Acima
@@ -6236,4 +6239,3 @@ language.uk=Ucraniano
 language.vi=Vietnamita
 language.zh_CN=Chinês
 language.zh_TW=Chinês (Taiwan)
-request-social-networking-summary-add-connection={0} gostaria de adicioná-lo como conexão.
