--- a/portal-impl/src/content/Language_pt_PT.properties
+++ b/portal-impl/src/content/Language_pt_PT.properties
@@ -3881,6 +3881,7 @@ request-a-new-password-reset-link=Solicitar um novo link para redefinição de s
 request-holiday=Requisitar Férias
 request-is-larger-than-x-and-could-not-be-processed=O pedido é maior que {0} e não pôde ser processado.
 request-pending=Pedido Pendente
+request-social-networking-summary-add-connection={0} gostaria de o adicionar como conexão.
 request-social-networking-summary-add-friend={0} quer ser seu amigo.
 request-social-networking-summary-join-organization={0} quer participar de {1}.
 request-timeout=Tempo do Pedido Expirado
@@ -5132,6 +5133,7 @@ training-credits=Créditos de Formação
 trainings=Formações
 transaction-id=ID da Transação
 translate=Traduza
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Traduzir Conteúdo Web para {0}
 translation=Tradução
 translations=Traduções
@@ -5196,6 +5198,7 @@ unscramble=Decifrar
 unsubscribe=Remover Subscrição
 unsubscribe-from-comments=Remover Subscrição dos Comentários
 untitled=Sem título (Automatic Translation)
+untranslated=Untranslated (Automatic Copy)
 untrusted=Não Confiável
 untrusted-plugin-repositories=Repositórios de Plugins não Confiáveis
 up=Acima
@@ -6241,4 +6244,3 @@ language.uk=Ucraniano
 language.vi=Vietnamita
 language.zh_CN=Chinês (China)
 language.zh_TW=Chinês (Taiwan)
-request-social-networking-summary-add-connection={0} gostaria de o adicionar como conexão.
