--- a/portal-impl/src/content/Language_ro.properties
+++ b/portal-impl/src/content/Language_ro.properties
@@ -3876,6 +3876,7 @@ request-a-new-password-reset-link=Cere o noua parola resetare link-ul. (Automati
 request-holiday=Cerere Concediu
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
 request-pending=Cerere în curs (Automatic Translation)
+request-social-networking-summary-add-connection={0} would like to add you as a connection. (Automatic Copy)
 request-social-networking-summary-add-friend={0} vrea sa fie prietenul tau.
 request-social-networking-summary-join-organization={0} vrea sa se inscrie in{1}.
 request-timeout=Necesita Pauza
@@ -5127,6 +5128,7 @@ training-credits=Credite Training
 trainings=Training-uri
 transaction-id=ID TXN
 translate=Traducere
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Translating Web Content to {0} (Automatic Copy)
 translation=Traducător
 translations=Traducător
@@ -5191,6 +5193,7 @@ unscramble=Unscramble (Automatic Translation)
 unsubscribe=Dezaboneaza
 unsubscribe-from-comments=Dezaboneaza de la Comentarii
 untitled=Fără titlu (Automatic Translation)
+untranslated=Untranslated (Automatic Copy)
 untrusted=Neacreditat
 untrusted-plugin-repositories=Pepertoriu de Plugin-uri Neacreditat
 up=Sus
@@ -6236,4 +6239,3 @@ language.uk=Ucraniana
 language.vi=Vietnameză
 language.zh_CN=Chineza (China)
 language.zh_TW=Chineză (Taiwan)
-request-social-networking-summary-add-connection={0} would like to add you as a connection. (Automatic Copy)
