--- a/portal-impl/src/content/Language_sk.properties
+++ b/portal-impl/src/content/Language_sk.properties
@@ -3876,6 +3876,7 @@ request-a-new-password-reset-link=Vyžiadať nový odkaz na vygenerovanie hesla.
 request-holiday=Požiadať o volno
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
 request-pending=Čakajúca žiadosť
+request-social-networking-summary-add-connection={0} by sa s Vami rád spojil.
 request-social-networking-summary-add-friend={0} chce byť tvoj priateľ.
 request-social-networking-summary-join-organization={0} sa chce pripojiť k {1}.
 request-timeout=Prekročenie časového limit požiadavky
@@ -5127,6 +5128,7 @@ training-credits=Kredity kurzu
 trainings=Tréningy
 transaction-id=ID transakcie
 translate=Preložiť
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Prekladanie webového obsahu do {0}
 translation=Prekladač
 translations=Prekladač
@@ -5191,6 +5193,7 @@ unscramble=Usporiadať
 unsubscribe=Zrušiť odoberanie
 unsubscribe-from-comments=Odhlásiť sa z odberu komentárov
 untitled=Bez názvu (Automatic Translation)
+untranslated=Untranslated (Automatic Copy)
 untrusted=Nedôveryhodný
 untrusted-plugin-repositories=Nedôveryhodné repozitáre zásuvných modulov
 up=Hore
@@ -6236,4 +6239,3 @@ language.uk=Ukrajinčina
 language.vi=Vietnamčina
 language.zh_CN=Čínština (Čína)
 language.zh_TW=Čínština (Taiwan)
-request-social-networking-summary-add-connection={0} by sa s Vami rád spojil.
