--- a/portal-impl/src/content/Language_sv.properties
+++ b/portal-impl/src/content/Language_sv.properties
@@ -3876,6 +3876,7 @@ request-a-new-password-reset-link=Begära ett nytt lösenord återställa länke
 request-holiday=Begär semester
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
 request-pending=Request Pending (Automatic Copy)
+request-social-networking-summary-add-connection={0} would like to add you as a connection. (Automatic Copy)
 request-social-networking-summary-add-friend={0} vill bli din vän.
 request-social-networking-summary-join-organization={0} vill gå med i {1}.
 request-timeout=Förfrågan gjorde timeout
@@ -5127,6 +5128,7 @@ training-credits=Utbildningskrediter
 trainings=Utbildningar
 transaction-id=Transaktions-ID
 translate=Översätt
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Translating Web Content to {0} (Automatic Copy)
 translation=Översättare
 translations=Översättare
@@ -5191,6 +5193,7 @@ unscramble=Blanda inte
 unsubscribe=Avsluta prenumeration
 unsubscribe-from-comments=Prenumerera på kommentarer
 untitled=Untitled (Automatic Copy)
+untranslated=Untranslated (Automatic Copy)
 untrusted=Osäker
 untrusted-plugin-repositories=Osäkra tilläggskällor
 up=Upp
@@ -6236,4 +6239,3 @@ language.uk=Ukrainska
 language.vi=Vietnamese (Automatic Copy)
 language.zh_CN=Chinese (China) (Automatic Copy)
 language.zh_TW=Chinese (Taiwan) (Automatic Copy)
-request-social-networking-summary-add-connection={0} would like to add you as a connection. (Automatic Copy)
