--- a/portal-impl/src/content/Language_zh_CN.properties
+++ b/portal-impl/src/content/Language_zh_CN.properties
@@ -3879,6 +3879,7 @@ request-a-new-password-reset-link=申请一个新密码重置链接。
 request-holiday=假期申请
 request-is-larger-than-x-and-could-not-be-processed=请求大于{0}因此无法处理。
 request-pending=请求待处理
+request-social-networking-summary-add-connection={0}想添加您为联系人。
 request-social-networking-summary-add-friend={0}想成为您的好友。
 request-social-networking-summary-join-organization={0}想加入{1}。
 request-timeout=请求超时
@@ -5130,6 +5131,7 @@ training-credits=培训分数
 trainings=培训
 transaction-id=TXN ID
 translate=翻译
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=正在翻译网站内容到{0}
 translation=翻译器
 translations=翻译器
@@ -5194,6 +5196,7 @@ unscramble=破解
 unsubscribe=取消订阅
 unsubscribe-from-comments=取消评论订阅
 untitled=无题 (Automatic Translation)
+untranslated=Untranslated (Automatic Copy)
 untrusted=非信任的
 untrusted-plugin-repositories=非信任的Plugin存储库
 up=上
@@ -6239,4 +6242,3 @@ language.uk=乌克兰语
 language.vi=越南语
 language.zh_CN=汉语（简体）
 language.zh_TW=汉语（繁体）
-request-social-networking-summary-add-connection={0}想添加您为联系人。
