--- a/portal-impl/src/content/Language_zh_TW.properties
+++ b/portal-impl/src/content/Language_zh_TW.properties
@@ -3877,6 +3877,7 @@ request-a-new-password-reset-link=請求一個新的密碼重設連結。
 request-holiday=請求假日
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
 request-pending=請求待決
+request-social-networking-summary-add-connection={0} 想要加您作為連線。
 request-social-networking-summary-add-friend={0}想要成為您的朋友。
 request-social-networking-summary-join-organization={0}想要加入{1}。
 request-timeout=請求暫停
@@ -5128,6 +5129,7 @@ training-credits=訓練信用
 trainings=訓練
 transaction-id=交易ID
 translate=翻譯
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=翻譯網站內容至{0}
 translation=翻譯
 translations=翻譯
@@ -5192,6 +5194,7 @@ unscramble=破解
 unsubscribe=取消預訂
 unsubscribe-from-comments=取消預訂評論
 untitled=無題 (Automatic Translation)
+untranslated=Untranslated (Automatic Copy)
 untrusted=未信任的
 untrusted-plugin-repositories=未信任的插件資源庫
 up=上
@@ -6237,4 +6240,3 @@ language.uk=烏克蘭文
 language.vi=越南文
 language.zh_CN=中文(中國)
 language.zh_TW=中文(台灣)
-request-social-networking-summary-add-connection={0} 想要加您作為連線。
