--- a/portal-impl/src/content/Language_cs.properties
+++ b/portal-impl/src/content/Language_cs.properties
@@ -3876,6 +3876,7 @@ request-a-new-password-reset-link=Požádat o nové heslo pro obnovení spojení
 request-holiday=Požádat o dovolenou
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
 request-pending=Čekající požadavek
+request-social-networking-summary-add-connection={0} by se s Vámi rád spojil.
 request-social-networking-summary-add-friend={0} se chce stát Tvým přítelem.
 request-social-networking-summary-join-organization={0} se chce stát členem {1}.
 request-timeout=Čas vypršel
@@ -5127,6 +5128,7 @@ training-credits=Kredity kurzu
 trainings=Kurzy
 transaction-id=ID transakce
 translate=Přelož
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Překládání webového obsahu do {0}
 translation=Překladač
 translations=Překladač
@@ -5191,6 +5193,7 @@ unscramble=Uspořádat
 unsubscribe=Nesledovat
 unsubscribe-from-comments=Vypnout sledování komentářů
 untitled=Bez názvu (Automatic Translation)
+untranslated=Untranslated (Automatic Copy)
 untrusted=Neověřený
 untrusted-plugin-repositories=Repozitář neprověřených zásuvných modulů
 up=Nahoru
@@ -6236,4 +6239,3 @@ language.uk=Ukrajinský
 language.vi=Vietnamský
 language.zh_CN=Čínský (Čína)
 language.zh_TW=Čínský (Taiwan)
-request-social-networking-summary-add-connection={0} by se s Vámi rád spojil.
