--- a/portal-impl/src/content/Language_fa.properties
+++ b/portal-impl/src/content/Language_fa.properties
@@ -3876,6 +3876,7 @@ request-a-new-password-reset-link=درخواست یک لینک برای تنظی
 request-holiday=درخواست تعطیلات
 request-is-larger-than-x-and-could-not-be-processed=درخواست بیشتر از {0} است و نمی‌تواند پردازش شود.
 request-pending=درخواست در انتظار
+request-social-networking-summary-add-connection={0} می‌خواهد شما را به عنوان یک مخاطب اضافه کند.
 request-social-networking-summary-add-friend={0} تمایل دارد با شما دوست باشد.
 request-social-networking-summary-join-organization={0} میخواهد به {1} اتصال برقرار کند.
 request-timeout=حداکثر زمان مجاز گذشت
@@ -5127,6 +5128,7 @@ training-credits=اعتبارهای آموزشی
 trainings=آموزشی
 transaction-id=شناسه‌ی TXN
 translate=ترجمه
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=ترجمه‌ی محتوای سایت به {0}
 translation=ترجمه
 translations=ترجمه
@@ -5191,6 +5193,7 @@ unscramble=Unscramble (Automatic Translation)
 unsubscribe=قطع عضویت
 unsubscribe-from-comments=لغو اشتراک از خبرنامه نظرات
 untitled=بدون عنوان (Automatic Translation)
+untranslated=Untranslated (Automatic Copy)
 untrusted=غیرقابل اطمینان
 untrusted-plugin-repositories=مخازن پلاگین غیر قابل اعتماد
 up=بالا
@@ -6236,4 +6239,3 @@ language.uk=اکراينی
 language.vi=ویتنام
 language.zh_CN=چینی
 language.zh_TW=چینی (تایوان)
-request-social-networking-summary-add-connection={0} می‌خواهد شما را به عنوان یک مخاطب اضافه کند.
