--- a/portal-impl/src/content/Language_sl.properties
+++ b/portal-impl/src/content/Language_sl.properties
@@ -3876,6 +3876,7 @@ request-a-new-password-reset-link=Zahtevajte novo geslo ponastavite povezavo. (A
 request-holiday=Zahtevaj praznik
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
 request-pending=Zahteva do (Automatic Translation)
+request-social-networking-summary-add-connection={0} would like to add you as a connection. (Automatic Copy)
 request-social-networking-summary-add-friend={0} wants to be your friend. (Automatic Copy)
 request-social-networking-summary-join-organization={0} wants to join {1}. (Automatic Copy)
 request-timeout=Zahtevaj premor
@@ -5127,6 +5128,7 @@ training-credits=Usposabljanje kreditov (Automatic Translation)
 trainings=šolanja
 transaction-id=Id prenosa.
 translate=Prevedi.
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Translating Web Content to {0} (Automatic Copy)
 translation=Prevajalnik
 translations=Prevajalnik
@@ -5191,6 +5193,7 @@ unscramble=Prikaži nezmešano.
 unsubscribe=Odjavi.
 unsubscribe-from-comments=Odjavo iz komentarjev (Automatic Translation)
 untitled=Brez naslova (Automatic Translation)
+untranslated=Untranslated (Automatic Copy)
 untrusted=Nevreden zaupanja.
 untrusted-plugin-repositories=Zaupanja nevredna skladišča vtičnikov.
 up=Gor
@@ -6236,4 +6239,3 @@ language.uk=Ukrajinsko
 language.vi=vietnamščina
 language.zh_CN=Kitajščina (Kitajska)
 language.zh_TW=Kitajščina (Tajvan)
-request-social-networking-summary-add-connection={0} would like to add you as a connection. (Automatic Copy)
