--- a/portal-impl/src/content/Language_sr_RS.properties
+++ b/portal-impl/src/content/Language_sr_RS.properties
@@ -3876,6 +3876,7 @@ request-a-new-password-reset-link=Request a new password reset link. (Automatic 
 request-holiday=Захтев за Одмор
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
 request-pending=Request Pending (Automatic Copy)
+request-social-networking-summary-add-connection={0} жели да вас дода као конекцију.
 request-social-networking-summary-add-friend={0} жели да буде твој пријатељ.
 request-social-networking-summary-join-organization={0} жели да се придружи {1}.
 request-timeout=Захтев Пауза
@@ -5127,6 +5128,7 @@ training-credits=Кредити за Обуку
 trainings=Обуке
 transaction-id=TXN ИД
 translate=Преведи
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Преведи Веб Садржај у {0}
 translation=Преводилац
 translations=Преводилац
@@ -5191,6 +5193,7 @@ unscramble=Размрси
 unsubscribe=Одјави се
 unsubscribe-from-comments=Размрси од Коментара
 untitled=Untitled (Automatic Copy)
+untranslated=Untranslated (Automatic Copy)
 untrusted=Непоуздан
 untrusted-plugin-repositories=Непроверени Додатак Спремишта
 up=Изнад
@@ -6236,4 +6239,3 @@ language.uk=Украјински
 language.vi=Vietnamese (Automatic Copy)
 language.zh_CN=Chinese (China) (Automatic Copy)
 language.zh_TW=Chinese (Taiwan) (Automatic Copy)
-request-social-networking-summary-add-connection={0} жели да вас дода као конекцију.
