--- a/portal-impl/src/content/Language_tr.properties
+++ b/portal-impl/src/content/Language_tr.properties
@@ -3876,6 +3876,7 @@ request-a-new-password-reset-link=Bağlantı yeni bir parola sıfırlama isteği
 request-holiday=Tatil İste
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
 request-pending=Bekleyen istek (Automatic Translation)
+request-social-networking-summary-add-connection={0} would like to add you as a connection. (Automatic Copy)
 request-social-networking-summary-add-friend={0} arkadaşınız olmak istiyor.
 request-social-networking-summary-join-organization={0} şuraya katılmak istiyor: {1}.
 request-timeout=İstek Zamanı Doldu
@@ -5127,6 +5128,7 @@ training-credits=Eğitim kredileri
 trainings=Eğitimler
 transaction-id=TXN KİMLİĞİ (Automatic Translation)
 translate=Çevir
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Translating Web Content to {0} (Automatic Copy)
 translation=Çeviri
 translations=Çeviri
@@ -5191,6 +5193,7 @@ unscramble=Deşifre et
 unsubscribe=Aboneliği iptal et.
 unsubscribe-from-comments=Yorum--dan çıkmak (Automatic Translation)
 untitled=Adsız (Automatic Translation)
+untranslated=Untranslated (Automatic Copy)
 untrusted=üvenilir olmayan
 untrusted-plugin-repositories=Güvenilir Olmayan Eklenti Kaynakları
 up=Yukarı
@@ -6236,4 +6239,3 @@ language.uk=Ukraynalı
 language.vi=Vietnam dili
 language.zh_CN=Çince (Çin)
 language.zh_TW=Çince (Tayvan)
-request-social-networking-summary-add-connection={0} would like to add you as a connection. (Automatic Copy)
