--- a/portal-impl/src/content/Language_uk.properties
+++ b/portal-impl/src/content/Language_uk.properties
@@ -3876,6 +3876,7 @@ request-a-new-password-reset-link=Надіслати запит на новий 
 request-holiday=Запит вихідних
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
 request-pending=Запит очікування (Automatic Translation)
+request-social-networking-summary-add-connection={0} would like to add you as a connection. (Automatic Copy)
 request-social-networking-summary-add-friend={0} wants to be your friend. (Automatic Copy)
 request-social-networking-summary-join-organization={0} wants to join {1}. (Automatic Copy)
 request-timeout=Інтервал очікування запиту
@@ -5127,6 +5128,7 @@ training-credits=Інформація про тренінг
 trainings=Тренінги
 transaction-id=Номер транзакції
 translate=Перекласти
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Translating Web Content to {0} (Automatic Copy)
 translation=Перекладач
 translations=Перекладач
@@ -5191,6 +5193,7 @@ unscramble=Розплуитати
 unsubscribe=Відписатися
 unsubscribe-from-comments=Відмовитись від коментарів (Automatic Translation)
 untitled=Без назви (Automatic Translation)
+untranslated=Untranslated (Automatic Copy)
 untrusted=Недовірений
 untrusted-plugin-repositories=Недовірені репозитарії плагинів
 up=Вверх
@@ -6236,4 +6239,3 @@ language.uk=Український
 language.vi=в'єтнамська
 language.zh_CN=Китайська (Китай)
 language.zh_TW=Китайська (Тайвань)
-request-social-networking-summary-add-connection={0} would like to add you as a connection. (Automatic Copy)
