--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_et.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_et.properties
@@ -4,11 +4,10 @@ add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
 all-menus=Kõik menüüd (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-x-to-replace-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want {0} to replace {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
 function=Function (Automatic Copy)
 function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=Navigatsiooni menüü (Automatic Translation)
-main-menu=Main Menu (Automatic Copy)
 mark-as=Mark As: (Automatic Copy)
 menus=Menüüd (Automatic Translation)
 navigation=Navigation (Automatic Copy)
@@ -18,9 +17,7 @@ primary-navigation=Primary Navigation (Automatic Copy)
 rename-site-navigation-menu=Nimeta navigatsioonimenüü (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 secondary-navigation=Secondary Navigation (Automatic Copy)
-social-menu=Social Menu (Automatic Copy)
 social-navigation=Social Navigation (Automatic Copy)
-subsidiary-menu=Subsidiary Menu (Automatic Copy)
 the-order-of-site-navigation-menu-items-is-invalid=Selle järjestuse saidi menüü ei sobi. (Automatic Translation)
 the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
 there-are-no-navigation-menus=Puuduvad menüüd navigeerimine. (Automatic Translation)
